<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.slavi.doggy.CockerspanielActivity">

    <GridView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/grdv_cockerspaniel"
        android:verticalSpacing="0dp"
        android:horizontalSpacing="0dp"
        android:stretchMode="columnWidth"
        android:numColumns="2"
        android:nestedScrollingEnabled="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/btn_home"
        android:layout_marginTop="3dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_home"
        android:id="@+id/btn_home"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/bone_button"
        android:textColor="@drawable/text_color"
        android:paddingTop="4dp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/txtv_filter"
        android:layout_toLeftOf="@+id/txtv_filter"
        android:layout_toStartOf="@+id/txtv_filter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtv_filter"
        android:id="@+id/txtv_filter"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_orderBy"
        android:id="@+id/btn_orderBy"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/bone_button"
        android:textColor="@drawable/text_color"
        android:paddingTop="4dp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/txtv_filter"
        android:layout_toRightOf="@+id/txtv_filter"
        android:layout_toEndOf="@+id/txtv_filter" />
</RelativeLayout>
