<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.slavi.doggy.ViewImageSpanActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:id="@+id/relativeLayout"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/btnimv_back"
        android:layout_marginBottom="3dp">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imgvAdapter"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btnimv_back"
        android:id="@+id/btnimv_back"
        android:background="@drawable/bone_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnimv_save"
        android:paddingTop="4dp"
        android:textStyle="bold"
        android:textColor="@drawable/text_color" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btnimv_share"
        android:id="@+id/btnimv_share"
        android:layout_alignTop="@+id/btnimv_save"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/bone_button"
        android:paddingTop="4dp"
        android:textStyle="bold"
        android:textColor="@drawable/text_color" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/btnimv_saveToSd"
        android:id="@+id/btnimv_save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bone_button"
        android:paddingTop="4dp"
        android:textStyle="bold"
        android:textColor="@drawable/text_color" />

</RelativeLayout>
